--- a/Tutor8/Makefile
+++ b/Tutor8/Makefile
@@ -2,9 +2,9 @@ PKG=tutor8.out
 
 DESTDIR = bin/
 
-CFLAGS=-std=gnu99 -Wall
-$(PKG): main.c # source.c header.h
-	gcc $(CFLAGS) main.c -o $(PKG)
+CFLAGS=-std=gnu99 -g -Wall
+$(PKG): main.c queue.c queue.h
+	gcc $(CFLAGS) main.c queue.c -o $(PKG)
 clean:
 	rm *.o $(PKG) -f
 	rm $(PKG) -f
